# NikiBot

./: .gitignore  NikiCMD  bot.py  commands.py  constants.py  niki.py  niki_process.py  password_generator.py  run.sh
.github/workflows/: build-cmd.yml  run-bot.yml
cpp_program/: CMakeLists.txt  build.sh
cpp_program/src/: Commands.cpp  Commands.h  Main.cpp
examples/: references.cfg
scripts/: banana.txt
